--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,8 +43,8 @@ jobs:
         run: |
           npm ci
           npm run lint || true
-        
-
+      
+      
 
       # ---------------------------
       # Unit Test
@@ -52,7 +52,7 @@ jobs:
       - name: Unit Tests
         run: |
           npm run test
-        
+      
 
       # ---------------------------
       # Set Environment Variables
@@ -103,7 +103,7 @@ jobs:
       # Security Scan (Trivy)
       # ---------------------------
       - name: Trivy Security Scan
-        uses: aquasecurity/trivy-action@v0.33.1
+        uses: aquasecurity/trivy-action@latest
         with:
           image-ref: '${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG}'
           vuln-type: 'os,library'
