--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches: [ develop, main ]
     tags:
-      - 'v*.*.*'     # Semantic Versioning
+      - 'v*.*.*'
 
 permissions:
   contents: write
   id-token: write
+  security-events: write   # 🔐 สำหรับ Trivy SARIF (optional)
 
 env:
   REGION: asia-southeast1
@@ -21,14 +22,28 @@ jobs:
 
     steps:
       # ---------------------------
-      # Checkout Source
+      # Checkout Source (Skip CI loop)
       # ---------------------------
       - name: Checkout
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0
+        if: github.actor != 'github-actions[bot]'
 
       # ---------------------------
-      # Detect Languages & Setup Tools
+      # Cache Node Modules
+      # ---------------------------
+      - name: Cache Node Modules
+        uses: actions/cache@v4
+        if: ${{ hashFiles('package-lock.json') != '' }}
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      # ---------------------------
+      # Setup Node
       # ---------------------------
       - name: Setup Node
         if: ${{ hashFiles('package.json') != '' }}
@@ -37,48 +52,35 @@ jobs:
           node-version: '18'
 
       # ---------------------------
-      # Lint
+      # Lint + Test
       # ---------------------------
+      - name: Install Dependencies
+        run: npm ci
+
       - name: Run Linter
-        run: |
-          npm ci
-          npm run lint || true
-      
-      
+        run: npm run lint --if-present
 
-      # ---------------------------
-      # Unit Test
-      # ---------------------------
       - name: Unit Tests
-        run: |
-          npm run test
-      
+        run: npm test --if-present
 
       # ---------------------------
-      # Set Environment Variables
+      # Set CI Variables
       # ---------------------------
       - name: Set CI Variables
         id: vars
         run: |
           SHORT_SHA=$(echo $GITHUB_SHA | cut -c1-7)
-
           if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
-            # For production tags
             IMAGE_TAG="${GITHUB_REF_NAME}"
-          else
-            # Branch images
-            if [[ "${GITHUB_REF_NAME}" == "develop" ]]; then
-              IMAGE_TAG="dev-${SHORT_SHA}"
-            elif [[ "${GITHUB_REF_NAME}" == "main" ]]; then
-              IMAGE_TAG="uat-${SHORT_SHA}"
-            fi
+          elif [[ "${GITHUB_REF_NAME}" == "develop" ]]; then
+            IMAGE_TAG="dev-${SHORT_SHA}"
+          elif [[ "${GITHUB_REF_NAME}" == "main" ]]; then
+            IMAGE_TAG="uat-${SHORT_SHA}"
           fi
-
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "IMAGE_TAG=$IMAGE_TAG"
 
       # ---------------------------
-      # GCP Authentication (WIF)
+      # GCP Auth
       # ---------------------------
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v2
@@ -87,46 +89,44 @@ jobs:
           service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
 
       - name: Configure Docker for Artifact Registry
-        run: |
-          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
-
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
       # ---------------------------
-      # Docker Build
+      # Build Docker Image
       # ---------------------------
       - name: Build Docker Image
         run: |
           docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG} .
 
       # ---------------------------
-      # Push Image to Artifact Registry
+      # Security Scan (Trivy)
+      # ---------------------------
+      - name: Trivy Image Scan
+        uses: aquasecurity/trivy-action@0.33.1
+        with:
+          image-ref: ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG}
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+
+      # ---------------------------
+      # Push to Artifact Registry
       # ---------------------------
       - name: Push Docker Image
         run: |
           docker push ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG}
 
-
       # ---------------------------
-      # Update GitOps Manifests
-      # (Only develop/main)
+      # Update GitOps Manifests (Safe)
       # ---------------------------
       - name: Update GitOps manifest
-        if: github.ref_type == 'branch'
+        if: github.ref_type == 'branch' && github.actor != 'github-actions[bot]'
         run: |
           echo "Updating GitOps manifest for ${GITHUB_REF_NAME}"
-          
-          VALUES_FILE="k8s/${GITHUB_REF_NAME}/values.yaml"
-          
-          if [ ! -f "$VALUES_FILE" ]; then
-            echo "❌ ERROR: $VALUES_FILE not found!"
-            exit 1
-          fi
-
-          sed -i "s/tag:.*/tag: ${IMAGE_TAG}/" "$VALUES_FILE"
-
+          FILE="k8s/${GITHUB_REF_NAME}/values.yaml"
+          if [ ! -f "$FILE" ]; then echo "❌ Missing $FILE"; exit 1; fi
+          sed -i "s/tag:.*/tag: ${IMAGE_TAG}/" "$FILE"
           git config user.email "bot@github.com"
           git config user.name "GitHub Actions Bot"
-
-          git add "$VALUES_FILE"
-          git commit -m "Update image tag to ${IMAGE_TAG}"
+          git add "$FILE"
+          git commit -m "Update image tag to ${IMAGE_TAG}" || echo "No changes to commit"
           git push
