--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -132,7 +132,7 @@ jobs:
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
           echo "🔨 Building image with tag: ${IMAGE_TAG}"
-          docker build \
+          docker buildx build --platform linux/amd64,linux/arm64 -f Dockerfile \
             -t ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG} .
 
       # ---------------------------
@@ -146,13 +146,6 @@ jobs:
           severity: 'CRITICAL,HIGH'
           ignore-unfixed: true
 
-
-      # ---------------------------
-      # Verify GCP Access Token
-      # ---------------------------
-      - name: Verify access token
-        run: |
-          gcloud auth print-access-token --impersonate-service-account=${{ secrets.WIF_SERVICE_ACCOUNT }} | head
 
       # ---------------------------
       # Push to Artifact Registry
