--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [ develop, main ]
     tags:
-      - 'v*.*.*'     # Semantic Versioning
+      - 'v*.*.*'
 
 permissions:
   contents: write
   id-token: write
-  security-events: write   # สำหรับ Trivy SARIF ถ้าใช้ในอนาคต
+  security-events: write
 
 env:
   REGION: asia-southeast1
@@ -18,7 +18,6 @@ env:
 
 jobs:
   ci:
-    # ป้องกัน GitOps loop: ถ้าเป็น bot ที่ push ไม่ต้องรันซ้ำ
     if: ${{ github.actor != 'github-actions[bot]' }}
     runs-on: ubuntu-latest
 
@@ -26,70 +25,47 @@ jobs:
       # ---------------------------
       # Checkout Source
       # ---------------------------
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
       # ---------------------------
-      # Setup Node + Cache
+      # Install & Cache Node deps
       # ---------------------------
       - name: Setup Node
         if: ${{ hashFiles('package.json') != '' }}
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 18
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
-      # ---------------------------
-      # Install Dependencies
-      # ---------------------------
       - name: Install Dependencies
-        run: |
-          if [ -f "package.json" ]; then
-            npm ci
-          else
-            echo "No package.json found, skip npm install."
-          fi
+        if: ${{ hashFiles('package.json') != '' }}
+        run: npm ci
 
       # ---------------------------
-      # Lint
+      # Lint & Test
       # ---------------------------
       - name: Run Linter
-        run: |
-          if [ -f "package.json" ]; then
-            npm run lint --if-present
-          else
-            echo "No package.json found, skip lint."
-          fi
+        if: ${{ hashFiles('package.json') != '' }}
+        run: npm run lint --if-present
 
-      # ---------------------------
-      # Unit Tests
-      # ---------------------------
       - name: Unit Tests
-        run: |
-          if [ -f "package.json" ]; then
-            npm test --if-present
-          else
-            echo "No package.json found, skip tests."
-          fi
+        if: ${{ hashFiles('package.json') != '' }}
+        run: npm test --if-present
 
       # ---------------------------
-      # Set CI Variables (IMAGE_TAG + ENV)
+      # Set CI Variables
       # ---------------------------
       - name: Set CI Variables
         id: vars
         run: |
-          SHORT_SHA=$(echo "$GITHUB_SHA" | cut -c1-7)
-
-          # Default
-          IMAGE_TAG=""
-          ENV=""
+          SHORT_SHA=${GITHUB_SHA::7}
 
           if [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
-            # Production tags (v1.0.0 ฯลฯ)
             IMAGE_TAG="${GITHUB_REF_NAME}"
+            ENV="prod"
           elif [[ "${GITHUB_REF_NAME}" == "develop" ]]; then
             IMAGE_TAG="dev-${SHORT_SHA}"
             ENV="develop"
@@ -97,22 +73,18 @@ jobs:
             IMAGE_TAG="uat-${SHORT_SHA}"
             ENV="uat"
           else
-            echo "⚠ Unsupported ref: ${GITHUB_REF_TYPE} / ${GITHUB_REF_NAME}"
-          fi
-
-          if [[ -z "$IMAGE_TAG" ]]; then
-            echo "❌ IMAGE_TAG is empty, abort."
+            echo "⚠ Unsupported ref: ${GITHUB_REF_TYPE}/${GITHUB_REF_NAME}"
             exit 1
           fi
 
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          echo "ENV=$ENV" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+          echo "ENV=${ENV}"         >> $GITHUB_ENV
 
-          echo "✅ IMAGE_TAG = $IMAGE_TAG"
-          echo "✅ ENV       = $ENV"
+          echo "🏷  IMAGE_TAG = $IMAGE_TAG"
+          echo "🌍 ENV       = $ENV"
 
       # ---------------------------
-      # GCP Auth (Workload Identity Federation)
+      # GCP Auth (OIDC Workload Identity)
       # ---------------------------
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v2
@@ -125,19 +97,28 @@ jobs:
           gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
       # ---------------------------
-      # Build Docker Image
+      # Build & Push (Multi-Arch + Cache)
       # ---------------------------
-      - name: Build Docker Image
-        env:
-          IMAGE_TAG: ${{ env.IMAGE_TAG }}
+      - name: Build & Push Docker Image
         run: |
-          echo "🔨 Building image with tag: ${IMAGE_TAG}"
-          docker buildx build --platform linux/amd64,linux/arm64 -t ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG} .
+          IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG}
+          echo "🔨 Building & Pushing ${IMAGE_URI}"
+
+          docker buildx create --use --name buildx || docker buildx use buildx
+
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            --build-arg NODE_ENV=production \
+            --cache-from=type=registry,ref=${IMAGE_URI} \
+            --cache-to=type=registry,ref=${IMAGE_URI},mode=max \
+            -t ${IMAGE_URI} \
+            . \
+            --push
 
       # ---------------------------
-      # Security Scan (Trivy)
+      # Trivy Scan
       # ---------------------------
-      - name: Trivy Image Scan
+      - name: Trivy Scan
         uses: aquasecurity/trivy-action@0.33.1
         with:
           image-ref: ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
@@ -145,47 +126,21 @@ jobs:
           severity: 'CRITICAL,HIGH'
           ignore-unfixed: true
 
-
       # ---------------------------
-      # Push to Artifact Registry
-      # ---------------------------
-      - name: Push Docker Image
-        env:
-          IMAGE_TAG: ${{ env.IMAGE_TAG }}
-        run: |
-          echo "📦 Pushing image: ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG}"
-          docker push ${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/${{ env.REPO_NAME }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG}
-
-      # ---------------------------
-      # Update GitOps Manifests (develop/uat only)
+      # GitOps Update
       # ---------------------------
       - name: Update GitOps manifest
         if: github.ref_type == 'branch'
-        env:
-          ENV: ${{ env.ENV }}
-          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: |
-          if [[ -z "$ENV" ]]; then
-            echo "ℹ️ No ENV mapping for branch ${GITHUB_REF_NAME}, skip GitOps update."
-            exit 0
-          fi
-
-          echo "Updating GitOps manifest for branch: ${GITHUB_REF_NAME}"
-          echo "🚀 GitOps target environment = ${ENV}"
-
           VALUES_FILE="k8s/helm/test-devops/values-${ENV}.yaml"
+          [ -f "$VALUES_FILE" ] || { echo "❌ Missing: $VALUES_FILE"; exit 1; }
 
-          if [[ ! -f "$VALUES_FILE" ]]; then
-            echo "❌ Missing environment values file: $VALUES_FILE"
-            exit 1
-          fi
-
-          echo "📝 Set image tag to ${IMAGE_TAG} in ${VALUES_FILE}"
+          echo "📝 Update tag to ${IMAGE_TAG} in ${VALUES_FILE}"
           sed -i "s|tag:.*|tag: ${IMAGE_TAG}|g" "$VALUES_FILE"
 
           git config user.email "bot@github.com"
-          git config user.name "GitHub Actions Bot"
+          git config user.name  "GitHub Actions Bot"
 
           git add "$VALUES_FILE"
-          git commit -m "GitOps: Update ${ENV} to image tag ${IMAGE_TAG}" || echo "ℹ️ No changes to commit"
+          git commit -m "GitOps: Update ${ENV} image to ${IMAGE_TAG}" || echo "ℹ️ No changes"
           git push
