feat: add terraform infrastructure and improve kubernetes configs
- Add terraform infrastructure for GKE clusters
- Update helm charts with LoadBalancer services
- Add backend config for health checks
- Improve application with HTTP server
- Update gitignore for terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,13 @@ target/
 # Application specific
 data/
 logs/
+
+# Terraform files
+.terraform/
+.terraform.lock.hcl
+*.tfstate
+*.tfstate.*
+*.tfplan
+*.tfplan.*
+.terraformrc
+terraform.rc
