--- a/helm/test-devops/templates/deployment.yaml
+++ b/helm/test-devops/templates/deployment.yaml
@@ -23,13 +23,13 @@ spec:
                 name: {{ .Values.app.name }}-config
           readinessProbe:
             httpGet:
-              path: /healthz
+              path: /health
               port: 3000
             initialDelaySeconds: 10
             periodSeconds: 5
           livenessProbe:
             httpGet:
-              path: /healthz
+              path: /health
               port: 3000
             initialDelaySeconds: 20
             periodSeconds: 10
