edit application "test-devops-gitops"

--- a/resources/codefresh/test-devops-gitops.yaml
+++ b/resources/codefresh/test-devops-gitops.yaml
@@ -11,7 +11,7 @@ spec:
   project: cf-git-sources
   sources:
   - repoURL: https://github.com/extosoft-devsecops/test-devops-gitops.git
-    path: ''
+    path: git-sources/codefresh/default
     targetRevision: HEAD
     directory:
       include: '*'
