--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node index.js",
     "test": "echo \"PASS\" && exit 0",
     "lint": "echo \"PASS\" && exit 0"
   },
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "lynx": "^0.2.0"
+    "hot-shots": "^11.2.0"
   }
 }
