--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -134,7 +134,8 @@ jobs:
           tags: ${{ steps.meta.outputs.image }}
 
       - name: "Trivy Image Scan"
-        run: echo "✅ Trivy Image Scan stage - PASSED (skipped for development)" >> "$GITHUB_OUTPUT"
+        run: |
+          echo "✅ Trivy Image Scan stage - PASSED (skipped for development)" >> "$GITHUB_OUTPUT"
   #        uses: aquasecurity/trivy-action@0.28.0
   #        with:
   #          image-ref: ${{ steps.meta.outputs.image }}
