--- a/helm/app/values-local.yaml
+++ b/helm/app/values-local.yaml
@@ -1,18 +1,18 @@
 replicaCount: 1
 
 image:
-  repository: test-devops  # ใช้ชื่อสั้นสำหรับ local
+  repository: test-devops  # Local image name
   tag: "latest"
-  pullPolicy: Never  # ไม่ต้อง pull จาก registry, ใช้ local image
+  pullPolicy: IfNotPresent  # Changed from Never to IfNotPresent for Docker Desktop
 
 service:
-  type: NodePort  # ใช้ NodePort เพื่อเข้าถึงผ่าน localhost
+  type: NodePort  # Use NodePort for localhost access
   port: 3000
-  nodePort: 30080  # เข้าถึงผ่าน localhost:30080
+  nodePort: 30080  # Access via localhost:30080
 
 env:
   serviceName: "test-devops"
-  enableMetrics: "false"  # ปิด metrics สำหรับ local testing
+  enableMetrics: "true"  # Enable metrics for testing (without Datadog)
   ddDogstatsdPort: "8125"
   nodeEnv: "local"
 
@@ -28,7 +28,7 @@ podAnnotations:
   env: "local"
   tier: "development"
 
-# ปิด Datadog Agent สำหรับ local testing
+# Disable Datadog Agent for local testing
 datadog:
   enabled: false
 
