--- a/helm/test-devops/Chart.yaml
+++ b/helm/test-devops/Chart.yaml
@@ -1,7 +1,24 @@
 apiVersion: v2
 name: test-devops
-description: Test DevOps App for Docker Desktop Kubernetes
+description: A DevOps test application with Node.js, Datadog monitoring, and health checks for Docker Desktop Kubernetes
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
+
+keywords:
+  - nodejs
+  - devops
+  - monitoring
+  - datadog
+  - kubernetes
+  - docker-desktop
+
+maintainers:
+  - name: ExtosoftDevSecOps
+    email: devsecops@extosoft.com
+
+sources:
+  - https://github.com/extosoft-devsecops/test-devops
+
+home: https://github.com/extosoft-devsecops/test-devops
 
